fix: set Portfolio headline to z-index: 1, chore: text improvements

--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -1,6 +1,7 @@
 .portfolio {
     position: relative;
     overflow: hidden;
+    z-index: 1;
 }
 
 .flex-box {
